<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bot_n">Botón</string>
    <string name="descripcion">descripcion</string>
    <string name="boton2">boton2</string>
    <string name="test">TEST</string>
    <string name="app_de_teleasistencia">App de Teleasistencia</string>
    <string name="estado">Estado</string>
    <string name="posici_n">Posición</string>
    <string name="tensi_n">Tensión</string>
    <string name="az_car">Azúcar</string>
    <string name="pulso">Pulso</string>
    <string name="datos_del_paciente">DATOS DEL PACIENTE</string>
    <string name="comprobar">Comprobar</string>
    <string name="gps">GPS</string>
    <string name="giroscopios">Giroscopios</string>
    <string name="aceler_">Aceler.</string>
    <string name="aceler_metro">Acelerómetro</string>
    <string name="desarrollo">Desarrollo</string>
    <string name="pantalla_de_ayuda">PANTALLA DE AYUDA</string>
    <string name="ll_manos">Llámanos</string>
    <string name="ayuda_app_showasaction_">AYUDA\n        app:showAsAction=</string>
    <string name="ayuda">AYUDA</string>
    <string name="aceler_m_">Aceleróm.</string>
    <string name="devel_">DEVEL.</string>
    <string name="datos">DATOS</string>
    <string name="develop_">DEVELOP.</string>
    <string name="develop">DEVELOP</string>
    <string name="_pantalla_de_datos_todos_los_datos_no_se_pueden_cambiar_">- Pantalla de Datos: Todos los datos (no se pueden cambiar).</string>
    <string name="_pantalla_de_develop_todos_los_datos_se_pueden_cambiar_para_hacer_pruebas_">- Pantalla de Develop: Todos los datos (se pueden cambiar para hacer pruebas).</string>
    <string name="uso_de_la_app_">Uso de la App:</string>
    <string name="_bot_n_rojo_enviar_los_datos_actuales_alarma">- Botón rojo: Enviar los datos actuales / Alarma</string>
    <string name="gps_latitud">GPS-Latitud</string>
    <string name="gps_longitud">GPS-Longitud</string>
    <string name="datoss">DATOSS</string>
    <string name="humedad">Humedad</string>
    <string name="gas">Gas</string>
    <string name="aceleraci_n">Aceleración</string>
    <string name="temperatura">Temperatura</string>
    <string name="temp_">Temp(º)</string>

</resources>
