<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FAF371" 
    tools:context="com.example.app.MainActivity" >
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="30dp"
        android:text="@string/tensi_n"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="30dp"
        android:text="@string/az_car"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="30dp"
        android:text="@string/temperatura"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="30dp"
        android:text="@string/gas"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    


    <EditText
        android:id="@+id/editText2"
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:gravity="center"
        android:textStyle="bold"
        android:background="#BCE8FF" 
        android:ems="6"
        android:inputType="number" >
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="#BCE8FF" 
        android:ems="6"
        android:inputType="number" >
        <requestFocus />
    </EditText>
    
    
    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="#BCE8FF" 
        android:ems="6"
        android:inputType="number" >
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="#BCE8FF" 
        android:ems="6"
        android:inputType="number" >
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="#BCE8FF" 
        android:ems="6"
        android:inputType="number" >
        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4"
        android:contentDescription="@string/descripcion"
        android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:layout_toRightOf="@+id/imageButton1"
        android:layout_toEndOf="@+id/imageButton1"
        android:text="@string/datos_del_paciente"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="68dp"
        android:text="@string/pulso"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
</RelativeLayout>